--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
     name: CI
     strategy:
       matrix:
-        nextcloudVersion: [ stable22, stable23, stable24, stable25, master ]
-        phpVersion: [ 7.4, 8.0, 8.1 ]
+        nextcloudVersion: [stable25 ]
+        phpVersion: [ 8.1 ]
         exclude:
           - nextcloudVersion: stable22
             phpVersion: 8.1
@@ -47,7 +47,7 @@ jobs:
           HSTS: "off"
 
       nextcloud:
-        image: ghcr.io/juliushaertl/nextcloud-dev-php-81:latest
+        image: ghcr.io/juliushaertl/nextcloud-dev-php81:latest
         env:
           NEXTCLOUD_AUTOINSTALL: "YES"
           NEXTCLOUD_AUTOINSTALL_APPS: "viewer, activity"
