move sharing related tests to new context
Signed-off-by: Artur Neumann <artur@jankaritech.com>

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -11,3 +11,4 @@ default:
             adminUsername: admin
             adminPassword: admin
             regularUserPassword: 123456
+        - SharingContext:
