move direct upload step def. into own context
Signed-off-by: Artur Neumann <artur@jankaritech.com>

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -12,3 +12,4 @@ default:
             adminPassword: admin
             regularUserPassword: 123456
         - SharingContext:
+        - DirectUploadContext:
