--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,9 @@ jobs:
     services:
       openproject:
         image: openproject/community:12
-        ports:
-          - 8081:80
         env:
           OPENPROJECT_SECRET_KEY_BASE: secret
-          OPENPROJECT_HOST__NAME: localhost:8081
+          OPENPROJECT_HOST__NAME: openproject
           OPENPROJECT_HTTPS: false
           OPENPROJECT_PASSWORD__MIN__LENGTH: 0
           OPENPROJECT_ONBOARDING__ENABLED: false
@@ -147,7 +145,7 @@ jobs:
       - name: wait on OpenProject
         uses: iFaxity/wait-on-action@v1
         with:
-          resource: http-get://localhost:8081/api/v3/
+          resource: http-get://openproject/api/v3/
           timeout: 240000
 
       - name: wait on Nextcloud
