--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
         with:
           php-version: ${{ format('{0}.{1}', matrix.phpVersionMajor,matrix.phpVersionMinor) }}
           tools: composer, phpunit
-          extensions: gd
+          extensions: gd, pdo_sqlite
           coverage: xdebug
 
       - name: Get composer cache directory
