--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,6 +108,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ steps.versions.outputs.nodeVersion }}
+          cache-dependency-path: integration_openproject/package-lock.json
           cache: 'npm'
 
       - name: Setup  NPM ${{ steps.versions.outputs.npmVersion }}
