NC master is not compatible with PHP 7
Signed-off-by: Artur Neumann <artur@jankaritech.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
             phpVersion: 8.1
           - nextcloudVersion: stable24
             phpVersion: 8.1
+          - nextcloudVersion: master
+            phpVersion: 7.4
     runs-on: ubuntu-latest
     steps:
       - name: Cancel previous runs
