--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,12 @@ jobs:
 
       - name: PHP & Vue Unit Tests
         run: |
+          pwd
+          mkdir -p server/apps/integration_openproject
+          cp -r `ls -A | grep -v 'server'` server/apps/integration_openproject/
+          cd server
+          ./occ a:e integration_openproject
+          cd apps/integration_openproject
           make phpunit
           make jsunit
 
