--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,6 @@ jobs:
 
       - name: PHP & Vue Unit Tests
         run: |
-          pwd
           mkdir -p server/apps/integration_openproject
           cp -r `ls -A | grep -v 'server'` server/apps/integration_openproject/
           cd server
@@ -105,7 +104,7 @@ jobs:
         uses: romeovs/lcov-reporter-action@v0.3.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          lcov-file: ./coverage/jest/lcov.info
+          lcov-file: ./server/apps/integration_openproject/coverage/jest/lcov.info
           delete-old-comments: true
           title: "JS Code Coverage"
 
@@ -113,8 +112,8 @@ jobs:
         if: ${{ github.event_name == 'pull_request' && matrix.nextcloudVersion == 'master' && matrix.phpVersion == '8.1' }}
         uses: danielpalme/ReportGenerator-GitHub-Action@5.0.3
         with:
-          reports: './coverage/php/cobertura.xml' # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
-          targetdir: './coverage/php' # REQUIRED # The directory where the generated report should be saved.
+          reports: './server/apps/integration_openproject/coverage/php/cobertura.xml' # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
+          targetdir: './server/apps/integration_openproject/coverage/php' # REQUIRED # The directory where the generated report should be saved.
           reporttypes: 'lcov' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
           sourcedirs: '' # Optional directories which contain the corresponding source code (separated by semicolon). The source directories are used if coverage report contains classes without path information.
           historydir: '' # Optional directory for storing persistent coverage information. Can be used in future reports to show coverage evolution.
@@ -133,7 +132,7 @@ jobs:
         uses: romeovs/lcov-reporter-action@v0.3.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          lcov-file: ./coverage/php/lcov.info
+          lcov-file: ./server/apps/integration_openproject/coverage/php/lcov.info
           delete-old-comments: true
           title: "PHP Code Coverage"
 
@@ -142,14 +141,15 @@ jobs:
         uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
         with:
           min_coverage: '59'
-          path: './coverage/jest/lcov.info'
+          path: './server/apps/integration_openproject/coverage/jest/lcov.info'
 
       - name: PHP coverage check
         if: ${{ github.event_name == 'pull_request' && matrix.nextcloudVersion == 'master' && matrix.phpVersion == '8.1' }}
         uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
         with:
           min_coverage: '57'
-          path: './coverage/php/lcov.info'
+          path: './server/apps/integration_openproject/coverage/php/lcov.info'
+
   api-tests:
     name: API tests
     strategy:
