--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -13,3 +13,4 @@ default:
             regularUserPassword: 123456
         - SharingContext:
         - DirectUploadContext:
+        - GroupfoldersContext:
