--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,9 +93,11 @@ jobs:
 
       - name: PHP & Vue Unit Tests
         run: |
+          git clone --depth 1 https://github.com/nextcloud/groupfolders.git -b ${{ matrix.nextcloudVersion }} server/apps/groupfolders
           mkdir -p server/apps/integration_openproject
           cp -r `ls -A | grep -v 'server'` server/apps/integration_openproject/
           cd server
+          ./occ a:e groupfolders
           ./occ a:e integration_openproject
           cd apps/integration_openproject
           make phpunit
@@ -199,7 +201,7 @@ jobs:
           SQL: ${{ matrix.database }}
           SERVER_BRANCH: ${{ matrix.nextcloudVersion }}
           NEXTCLOUD_AUTOINSTALL: "YES"
-          NEXTCLOUD_AUTOINSTALL_APPS: "viewer activity integration_openproject"
+          NEXTCLOUD_AUTOINSTALL_APPS: "viewer activity groupfolders integration_openproject"
           NEXTCLOUD_TRUSTED_DOMAINS: nextcloud
           VIRTUAL_HOST: "nextcloud"
           WITH_REDIS: "YES"
@@ -240,6 +242,13 @@ jobs:
         with:
           repository: nextcloud/activity
           path: activity
+          ref: ${{ matrix.nextcloudVersion }}
+
+      - name: Checkout groupfolders app
+        uses: actions/checkout@v2
+        with:
+          repository: nextcloud/groupfolders
+          path: groupfolders
           ref: ${{ matrix.nextcloudVersion }}
 
       - name: Setup PHP ${{ format('{0}.{1}', matrix.phpVersionMajor,matrix.phpVersionMinor) }}
